dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.53)
AC_INIT(xdx, 0.99, pg4i@amsat.org)
AM_INIT_AUTOMAKE

AC_PROG_INSTALL
AC_PROG_CC
AC_LANG_C

dnl Add the languages wich your application supports here.
ALL_LINGUAS="nl fr"
AM_GNU_GETTEXT([external])

# Checks for header files.
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h fcntl.h libintl.h netdb.h netinet/in.h string.h sys/socket.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_FUNC_FORK
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_CHECK_FUNCS([alarm bzero gethostbyname inet_ntoa memset mkdir socket strerror])

dnl Looking for configuration scripts.
AC_CHECK_PROG(PKG_INC,pkg-config,`pkg-config --cflags glib-2.0 gtk+-2.0 gobject-2.0 gmodule-2.0 pango pangoxft gdk-x11-2.0 gdk-pixbuf-2.0 atk gtk+-x11-2.0 pangox`)
AC_SUBST(PKG_INC)

dnl Looking for libraries.
LIBS=" "
PKG_LIB2=`pkg-config --libs glib-2.0 gtk+-2.0 gobject-2.0 gmodule-2.0 pango pangoxft gdk-x11-2.0 gdk-pixbuf-2.0 atk gtk+-x11-2.0 pangox`
PKG_LIB=""
for i in $PKG_LIB2 ; do
	case $i in 
		-l*) PKG_LIB="$i $PKG_LIB" ;;
		-L*) LIBS="$i $LIBS" ;;
	esac
done
for i in $PKG_LIB ; do
	j=${i#'-l'}
	AC_CHECK_LIB($j,main)
done

AC_OUTPUT([ \
	xdx.1 \
	xdx.spec
	Makefile \
	m4/Makefile \
	src/Makefile \
	po/Makefile.in \
	po/Makefile \
	])
